--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,54 @@ src/path_to_grammar.rs
 /target
 **/*.rs.bk
 
+#c### build temple
+/target
+build/
+dist/
+
+### go mod
+
+go.sum
+vendor/
+
+### go test
+# out of testcase
+*.test
+# test coverage out
+coverage.out
+coverage.txt
+# testData folder of golang
+testdata/
+# Expected results when tested
+.golden
+
+### Go template
+# Compiled Object files, Static and Dynamic libs (Shared Objects)
+*.o
+*.a
+*.so
+
+# Folders
+_obj
+_test
+
+# Architecture specific extensions/prefixes
+*.[568vq]
+[568vq].out
+
+*.cgo1.go
+*.cgo2.c
+_cgo_defun.c
+_cgo_gotypes.go
+_cgo_export.*
+
+_testmain.go
+
+*.exe
+*.test
+*.prof
+
+
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
@@ -53,8 +101,7 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
-
-
+# Created by .ignore support plugin (hsz.mobi)
 ### Linux template
 *~
 
@@ -66,32 +113,6 @@ fabric.properties
 
 # Linux trash folder which might appear on any partition or disk
 .Trash-*
-### OSX template
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Icon must end with two \r
-Icon
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
 ### Windows template
 # Windows image file caches
 Thumbs.db
@@ -111,3 +132,29 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+### OSX template
+*.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
