--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -1,8 +1,7 @@
 name: rust-ci
+
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
+  workflow_call: # https://docs.github.com/actions/using-workflows/reusing-workflows#using-inputs-and-secrets-in-a-reusable-workflow
 
 env:
   CARGO_TERM_COLOR: always
@@ -26,26 +25,47 @@ env:
   RUST_BACKTRACE: 1
 
 jobs:
-  check:
-    name: Check
-    runs-on: ubuntu-latest
+  rust-ci:
+    name: rust-ci
+    strategy:
+      matrix:
+        toolchain:
+          - 'stable'
+          # - 'nightly'
+        # You can add more, for any target you'd like!
+        include:
+          - build: linux-gnu
+            os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+
+          - build: macos-x86
+            os: macos-latest
+            target: x86_64-apple-darwin
+
+          - build: windows-gnu
+            os: windows-latest
+            target: x86_64-pc-windows-gnu
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout sources
         uses: actions/checkout@v3
+
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          components: rustfmt, clippy
+          targets: ${{ matrix.target }}
+          toolchain: ${{ matrix.toolchain }}
+
+      - name: Run check rust environment
+        run: rustup show
+
       - uses: Swatinem/rust-cache@v2
 
       - name: Run cargo check
-        run: cargo check
-      - name: Run cargo test
-        run: cargo test
-
-  lints:
-    name: Lints
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout sources
-        uses: actions/checkout@v3
-      - uses: Swatinem/rust-cache@v2
+        run: cargo check --all --bins --examples --tests
+        # check release build
+        # run: cargo check --all --bins --examples --tests --release
 
       - name: Run cargo fmt
         run: cargo fmt --all -- --check
@@ -53,23 +73,5 @@ jobs:
       - name: Run cargo clippy
         run: cargo clippy -- -D warnings
 
-#  test_os:
-#    name: Build on ${{ matrix.os }} with Rust ${{ matrix.rust }}
-#    runs-on: ${{ matrix.os }}
-#    strategy:
-#      fail-fast: false
-#      matrix:
-#        os: [ubuntu-latest, macos-latest, windows-latest]
-#        rust: [stable]
-#        include:
-#          - rust: nightly
-#            os: ubuntu-latest
-#    steps:
-#      - name: Checkout sources
-#        uses: actions/checkout@v3
-#
-#      - name: Install ${{ matrix.rust }} toolchain
-#        run: rustup toolchain add ${{ matrix.rust }} --no-self-update && rustup default ${{ matrix.rust }}
-#      - uses: Swatinem/rust-cache@v2
-#      - name: Run cargo build
-#        run: cargo build
+      - name: Run cargo test
+        run: cargo test --all --all-features -- --show-output --nocapture
