build: update rust-release-platform strategy set

--- a/.github/workflows/rust-release-platform.yml
+++ b/.github/workflows/rust-release-platform.yml
@@ -27,10 +27,14 @@ jobs:
         shell: bash
     strategy:
       matrix:
+        # You can add more, for any target you'd like!
         toolchain:
           - 'stable'
           # - 'nightly'
-        # You can add more, for any target you'd like!
+        os:
+          - ubuntu-latest
+          - macos-latest
+          - windows-latest
         include:
           - build: linux-gnu
             os: ubuntu-latest
