style: change name of install rust at matrix

--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Checkout sources
         uses: actions/checkout@v3
 
-      - name: Install Rust
+      - name: Install Rust - ${{ matrix.build }}
         uses: dtolnay/rust-toolchain@stable
         with:
           components: rustfmt, clippy
