--- a/.github/workflows/rust-release-platform.yml
+++ b/.github/workflows/rust-release-platform.yml
@@ -51,7 +51,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install Rust
+      - name: Install Rust - ${{ matrix.build }}
         uses: dtolnay/rust-toolchain@stable
         with:
           components: rustfmt, clippy
