--- a/.github/workflows/deploy-tag.yml
+++ b/.github/workflows/deploy-tag.yml
@@ -33,7 +33,7 @@ jobs:
     name: repo-release
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Check deploy inputs
         run: |
@@ -42,11 +42,13 @@ jobs:
           echo "download_artifact_name: ${{inputs.download_artifact_name}}"
 
       - name: Download Artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         if: ${{ inputs.download_artifact_name != null }}
         with:
-          name: ${{inputs.download_artifact_name}}
           path: ${{ github.workspace }}/dist
+          ## https://github.com/actions/download-artifact/tree/v4?tab=readme-ov-file#breaking-changes
+          pattern: ${{ inputs.download_artifact_name }}-${{inputs.tag_name}}*
+          merge-multiple: true
 
       - name: Display structure of downloaded files
         if: ${{ inputs.download_artifact_name != null }}
