--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,10 +8,13 @@ on:
       - 'main'
       - 'release-*'
       - 'FE-*'
+      - '*-feature-*'
       - 'BF-*'
+      - '*-bug-*'
       - 'PU-*'
       - 'DOC-*'
-      - 'hotfix-*'
+      - '*-documentation-*'
+      - '*-hotfix-*'
     tags:
       - '*' # Push events to matching *, i.e. 1.0.0 v1.0, v20.15.10
   pull_request:
@@ -21,11 +24,11 @@ on:
       - opened
       - reopened
       - closed
-    branches:
-      - 'main'
-      - 'release-*'
-      - 'DOC-*'
-      - 'hotfix-*'
+    # branches:
+    #   - 'main'
+    #   - 'release-*'
+    #   - 'DOC-*'
+    #   - 'hotfix-*'
 
 permissions:
   contents: write
@@ -43,16 +46,40 @@ jobs:
     uses: ./.github/workflows/rust-ci.yml
     secrets: inherit
 
+  rust-build-check-main:
+    name: rust-build-check-main
+    needs:
+      - version
+      - rust-ci
+    if: ${{ ( github.event_name == 'push' && github.ref == 'refs/heads/main' ) || github.base_ref == 'main' }}
+    uses: ./.github/workflows/rust-release-platform.yml
+    secrets: inherit
+    with:
+      version_name: latest
+
+  rust-release-platform:
+    name: rust-release-platform
+    needs:
+      - version
+      - rust-ci
+    if: startsWith(github.ref, 'refs/tags/')
+    uses: ./.github/workflows/rust-release-platform.yml
+    secrets: inherit
+    with:
+      version_name: ${{ needs.version.outputs.tag_name }}
+      upload_artifact_name: rust-release
+
   deploy-tag:
     needs:
       - version
-      # - rust-release-platform
+      - rust-release-platform
     name: deploy-tag
     uses: ./.github/workflows/deploy-tag.yml
     if: startsWith(github.ref, 'refs/tags/')
     secrets: inherit
     with:
+      dry_run: false # open/close dry run
       prerelease: true
       tag_name: ${{ needs.version.outputs.tag_name }}
       tag_changes: ${{ needs.version.outputs.cc_changes }}
-      # download_artifact_name: rust-release
+      download_artifact_name: rust-release
