--- a/.github/workflows/deploy-tag.yml
+++ b/.github/workflows/deploy-tag.yml
@@ -3,6 +3,11 @@ name: deploy-tag
 on:
   workflow_call: # https://docs.github.com/actions/using-workflows/reusing-workflows#using-inputs-and-secrets-in-a-reusable-workflow
     inputs:
+      dry_run:
+        description: 'dry run flag'
+        default: false
+        required: false
+        type: boolean
       prerelease:
         description: 'prerelease flag'
         default: true
@@ -57,7 +62,7 @@ jobs:
 
       - uses: softprops/action-gh-release@master
         name: Create Release
-        if: startsWith(github.ref, 'refs/tags/')
+        if: ${{ ! inputs.dry_run }}
         with:
           tag_name: ${{inputs.tag_name}}
           ## with permissions to create releases in the other repo
