--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,14 +7,15 @@ on:
     branches:
       - 'main'
       - 'release-*'
-      - 'FE-*'
       - '*-feature-*'
-      - 'BF-*'
+      - '*-enhancement-*'
+      - '*-hotfix-*'
       - '*-bug-*'
+      - '*-documentation-*'
+      - 'BF-*'
+      - 'FE-*'
       - 'PU-*'
       - 'DOC-*'
-      - '*-documentation-*'
-      - '*-hotfix-*'
     tags:
       - '*' # Push events to matching *, i.e. 1.0.0 v1.0, v20.15.10
   pull_request:
