chore: enhance VS Code settings and update .gitignore
- Add file nesting patterns for better organization in VS Code Explorer
- Include IDE-specific files in .gitignore (VS Code, Visual Studio, Xcode)
- Maintain critical VS Code configuration files in source control

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,17 @@
 build/
 dist/
 
+### IDE
+
+.continuerc.json
+
+xcuserdata/
+.idea/
+.vs/
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+
 ### rust mod
 
 vendor/
