--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,11 +58,19 @@ jobs:
     with:
       version_name: latest
 
+  rust-codecov-main:
+    name: rust-codecov-main
+    needs:
+      - version
+      - rust-ci
+    if: ${{ github.base_ref == 'main' }}
+    uses: ./.github/workflows/rust-codecov.yml
+    secrets: inherit
+
   rust-release-platform:
     name: rust-release-platform
     needs:
       - version
-      - rust-ci
     if: startsWith(github.ref, 'refs/tags/')
     uses: ./.github/workflows/rust-release-platform.yml
     secrets: inherit
