ci(workflow): trigger codecov for push events to main
Previously, the codecov job was only triggered when there was a pull request
targeting the main branch. This change ensures that codecov also runs for
direct push events to the main branch, improving code coverage tracking
consistency.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
     needs:
       - version
       - rust-ci
-    if: ${{ github.base_ref == 'main' }}
+    if: ${{ ( github.event_name == 'push' && github.ref == 'refs/heads/main' ) || github.base_ref == 'main' }}
     uses: ./.github/workflows/rust-codecov.yml
     secrets: inherit
 
