ci: add Codecov token and fix file input
- Add CODECOV_TOKEN secret to improve security and enable private repos support
- Move 'files' parameter to the correct position for proper functionality

--- a/.github/workflows/rust-codecov.yml
+++ b/.github/workflows/rust-codecov.yml
@@ -66,4 +66,5 @@ jobs:
         if: matrix.version == 'stable' && (github.ref == 'refs/heads/main' || github.event_name == 'push')
         uses: codecov/codecov-action@v5
         with:
-          file: cobertura.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: cobertura.xml
