--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ serde_derive = "1.0.163"
 serde_json = "1.0.133"
 actix-web = "4.9.0"
 serde_with = "3.11.0"
+
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
