--- a/.gitattributes
+++ b/.gitattributes
@@ -61,3 +61,8 @@
 *.PDF   diff=astextplain
 *.rtf   diff=astextplain
 *.RTF   diff=astextplain
+
+###############################################################################
+# linguist language
+###############################################################################
+*.mk linguist-language=rust
